# blux-ca

./: .gitattributes  .gitignore  CLARITY_AGENT_SPEC.md  COMMERCIAL.md  LICENSE  LICENSE-COMMERCIAL  Makefile  NOTICE  README.md  RELEASE.md  blux-ca  cA.ps1  cA.sh  cA_mux.sh  cA_proot.sh  ca.py  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  snapshot.md
.github/: FUNDING.yml
blux/: cli.py
blux_ca/: __init__.py  __main__.py  cli.py  config.py
ca/: __init__.py  catalog.py  cli.py  telemetry.py
catalogs/: models.yaml  plugins.yaml  tools.yaml
constitution/: behavior.md
docs/: ACCEPTANCE.md  ARCHITECTURE.md  COMPATIBILITY.md  CONFIGURATION.md  CONSTITUTION.md  CONTRACT.md  DEPRECATION.md  DETERMINISM.md  DISCERNMENT.md  DOCTRINE_INTEGRATION.md  ETHICS_ENGINE.md  INSTALL.md  INTEGRATIONS.md  INTERVENTIONS.md  OPERATIONS.md  PHYSICS_ALLOWLIST.json  PHYSICS_ALLOWLIST.md  PLATFORMS.md  PRIVACY.md  PRO_NOTES.md  ROADMAP.md  RUNBOOK.md  SECURITY.md  TRAINING_POLICY.md  TROUBLESHOOTING.md  VALIDATION.md  VISION.md  architecture.md  governance_and_amendments.md  index.md  rules_schema.md  safety_and_crisis_protocol.md  standards.md
doctrine/: audit.py  cli.py  engine.py  loader.py  redaction.py  schema.py
ethos/: manifest.yaml
examples/: goal_drift_probe.json  goal_hello.json  goal_infeasible.json
fixtures/: discernment_report.example.json  envelope.example.json
identity/: seed.json  system_prompt.txt
out2/: verdict.json
profiles/: cpu.json  gpu.json
schemas/: artifact.schema.json  goal.schema.json  policy_pack.schema.json  profile.schema.json  verdict.schema.json
scripts/: batch_task.py  export_audit_json.py  gen_filetree.py  ingest_reflection.py  interactive_repl.py  memory_query.py  new_entry.py  reflection.py  run_reflection_test.py  smoke.py  update_readme_filetree.py  validate_constitution.py
tests/: test_acceptance_harness_determinism.py  test_agent.py  test_ci_hooks.py  test_cli.py  test_compatibility.py  test_contract_roundtrip.py  test_determinism.py  test_discernment_report.py  test_drift_guard.py  test_evaluator.py  test_feasibility_minimal_delta.py  test_golden_multifile_patch.py  test_infeasible_delta.py  test_integration.py  test_orchestrator.py  test_physics.py  (+10 more)
(+177 files in other folders)
