[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blux-ca"
version = "0.1.0"
description = "BLUX Conscious Agent core"
authors = [{name = "BLUX", email = "ca@blux.ai"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "typer[all]",
  "fastapi",
  "pydantic>=1.10,<2.0",
  "PyYAML",
  "rich",
]

[project.scripts]
"blux-ca" = "ca.cli:app"

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = true

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP", "SIM", "D"]
ignore = ["D203", "D213"]
src = ["ca", "tests"]

[tool.ruff.per-file-ignores]
"tests/*" = ["D"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
strict_optional = false

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools]
license-files = [
  "LICENSE-APACHE",
  "NOTICE",
  "LICENSE-COMMERCIAL",
]
