[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "blux-ca"
version = "0.1.0"
description = "cA-0.1 baseline deterministic contract engine"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["jsonschema>=4.19"]

[project.optional-dependencies]
dev = ["pytest>=7.4"]

[project.scripts]
blux-ca = "blux_ca.io.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
